G/tests/fail/chained_compare.g
fn main() -> int {
    let a = 1
    let b = 2
    let c = 3
    let x = a < b < c
    return 0
}
